build/k8s/openresty.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openresty-deployment
  labels:
    app: openresty
spec:
  replicas: 3
  selector:
    matchLabels:
      app: openresty
  template:
    metadata:
      labels:
        app: openresty
    spec:
      containers:
        - name: openresty
          image: openresty:1.15.8
          ports:
            - containerPort: 80
