build/k8s/etcd.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
  labels:
    app: etcd
    namespace: kube-system
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  ports:
    - port: 2379
      name: server
      targetPort: 2379
  selector:
    app: etcd
