build/k8s/kubelet.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-04-18T10:15:49Z"
  labels:
    app.kubernetes.io/managed-by: prometheus-operator
    app.kubernetes.io/name: kubelet
    k8s-app: kubelet
  name: kubelet
  namespace: kube-system
  resourceVersion: "11512"
  uid: 95eb98ce-9a3b-44c5-8090-f806f32336ea
spec:
  clusterIP: None
  clusterIPs:
    - None
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: https-metrics
      port: 10250
      protocol: TCP
      targetPort: 10250
    - name: http-metrics
      port: 10255
      protocol: TCP
      targetPort: 10255
    - name: cadvisor
      port: 4194
      protocol: TCP
      targetPort: 4194
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
