build/k8s/postwoman.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: postwoman
  labels:
    app: postwoman
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: server
      targetPort: 3000
  selector:
    app: postwoman
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postwoman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postwoman
  template:
    metadata:
      labels:
        app: postwoman
    spec:
      containers:
        - name: postwoman
          image: liyasthomas/postwoman:latest
          imagePullPolicy: Always
          resources:
            # keep request = limit to keep this container in guaranteed class
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 64Mi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: postwoman
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: postwoman.172.17.0.4.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: postwoman
              servicePort: 3000
